# linkedin-engagement-ai

./: .env.example  .gitignore  Agent.md  Makefile  README.md  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml
apps/ai_engine/: .dockerignore  .env.example  Dockerfile  README_GEMINI.md  config.yaml  pyproject.toml
apps/ai_engine/app/: config.py  dependencies.py  main.py
apps/ai_engine/app/clients/: llm_client.py
apps/ai_engine/app/controllers/: career_controller.py  carousel_outline_controller.py  classifier_controller.py  comment_controller.py  enterprise_ai_controller.py  evals_ai_controller.py  extraction_controller.py  health_controller.py  idea_controller.py  post_controller.py  sales_controller.py  talent_ai_controller.py  virality_score_controller.py  week_plan_controller.py
apps/ai_engine/app/prompts/: framework_contrarian.txt  framework_lessons.txt  framework_playbook.txt  framework_story.txt  system_candidate_scorer.txt  system_classifier.txt  system_comment.txt  system_cover_letter.txt  system_dm_copilot.txt  system_idea.txt  system_intent_classifier.txt  system_llm_judge.txt  system_objection_handler.txt  system_post.txt  system_resume_optimizer.txt  system_sequence_generator.txt  system_signal_mapper.txt
apps/ai_engine/app/schemas/: career_schemas.py  classifier_schemas.py  comment_schemas.py  enterprise_schemas.py  idea_schemas.py  post_schemas.py  sales_schemas.py  talent_schemas.py
apps/ai_engine/app/services/: career_service.py  (+12 more)
apps/ai_engine/tests/: conftest.py  test_classifier_schemas.py  test_schemas.py
(+265 files in other folders)
